--- a/YRS Presentation/FlipBookPresentation.html
+++ b/YRS Presentation/FlipBookPresentation.html
@@ -1119,10 +1119,316 @@ count: false
 &lt;img src="FlipBookPresentation_files/figure-html/fullrose_auto_22_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
 
 ---
-.center[#Lines Diagram
+.center[# 2. Lines Diagram
+]
+.center[
+![an image](LinesOriginal.png)
+
+source: [Mortality of the British Army (1958)](https://archive.org/details/mortalityofbriti00lond/page/n33/mode/2up)
 ]
 ---
 
+
+
+
+count: false
+
+---
+count: false
+
+```
+# A tibble: 20 x 5
+     age n_soldier n_english d_soldier d_english
+   &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;
+ 1    20     10000     10000       169        82
+ 2    21      9831      9918       168        83
+ 3    22      9663      9835       166        84
+ 4    23      9497      9751       164        85
+ 5    24      9333      9666       162        86
+ 6    25      9171      9580       160        87
+ 7    26      9011      9493       159        88
+ 8    27      8852      9405       158        89
+ 9    28      8694      9316       157        91
+10    29      8537      9225       155        91
+11    30      8382      9134       153        93
+12    31      8229      9041       150        94
+13    32      8079      8947       147        95
+14    33      7932      8852       145        97
+15    34      7787      8755       144        97
+16    35      7643      8658       144        99
+17    36      7499      8559       143       101
+18    37      7356      8458       141       102
+19    38      7215      8356       138       103
+20    39      7077      8253       135       106
+```
+---
+count: false
+
+```
+# A tibble: 20 x 7
+     age n_soldier n_english d_soldier d_english age_group soldier_rate
+   &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt; &lt;fct&gt;            &lt;dbl&gt;
+ 1    20     10000     10000       169        82 20-25             16.9
+ 2    21      9831      9918       168        83 20-25             17.1
+ 3    22      9663      9835       166        84 20-25             17.2
+ 4    23      9497      9751       164        85 20-25             17.3
+ 5    24      9333      9666       162        86 20-25             17.4
+ 6    25      9171      9580       160        87 25-30             17.4
+ 7    26      9011      9493       159        88 25-30             17.6
+ 8    27      8852      9405       158        89 25-30             17.8
+ 9    28      8694      9316       157        91 25-30             18.1
+10    29      8537      9225       155        91 25-30             18.2
+11    30      8382      9134       153        93 30-35             18.3
+12    31      8229      9041       150        94 30-35             18.2
+13    32      8079      8947       147        95 30-35             18.2
+14    33      7932      8852       145        97 30-35             18.3
+15    34      7787      8755       144        97 30-35             18.5
+16    35      7643      8658       144        99 35-40             18.8
+17    36      7499      8559       143       101 35-40             19.1
+18    37      7356      8458       141       102 35-40             19.2
+19    38      7215      8356       138       103 35-40             19.1
+20    39      7077      8253       135       106 35-40             19.1
+```
+---
+count: false
+
+```
+# A tibble: 20 x 8
+     age n_soldier n_english d_soldier d_english age_group soldier_rate
+   &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt; &lt;fct&gt;            &lt;dbl&gt;
+ 1    20     10000     10000       169        82 20-25             16.9
+ 2    21      9831      9918       168        83 20-25             17.1
+ 3    22      9663      9835       166        84 20-25             17.2
+ 4    23      9497      9751       164        85 20-25             17.3
+ 5    24      9333      9666       162        86 20-25             17.4
+ 6    25      9171      9580       160        87 25-30             17.4
+ 7    26      9011      9493       159        88 25-30             17.6
+ 8    27      8852      9405       158        89 25-30             17.8
+ 9    28      8694      9316       157        91 25-30             18.1
+10    29      8537      9225       155        91 25-30             18.2
+11    30      8382      9134       153        93 30-35             18.3
+12    31      8229      9041       150        94 30-35             18.2
+13    32      8079      8947       147        95 30-35             18.2
+14    33      7932      8852       145        97 30-35             18.3
+15    34      7787      8755       144        97 30-35             18.5
+16    35      7643      8658       144        99 35-40             18.8
+17    36      7499      8559       143       101 35-40             19.1
+18    37      7356      8458       141       102 35-40             19.2
+19    38      7215      8356       138       103 35-40             19.1
+20    39      7077      8253       135       106 35-40             19.1
+# … with 1 more variable: english_rate &lt;dbl&gt;
+```
+---
+count: false
+
+```
+# A tibble: 20 x 4
+     age age_group soldier_rate english_rate
+   &lt;dbl&gt; &lt;fct&gt;            &lt;dbl&gt;        &lt;dbl&gt;
+ 1    20 20-25             16.9         8.2 
+ 2    21 20-25             17.1         8.37
+ 3    22 20-25             17.2         8.54
+ 4    23 20-25             17.3         8.72
+ 5    24 20-25             17.4         8.90
+ 6    25 25-30             17.4         9.08
+ 7    26 25-30             17.6         9.27
+ 8    27 25-30             17.8         9.46
+ 9    28 25-30             18.1         9.77
+10    29 25-30             18.2         9.86
+11    30 30-35             18.3        10.2 
+12    31 30-35             18.2        10.4 
+13    32 30-35             18.2        10.6 
+14    33 30-35             18.3        11.0 
+15    34 30-35             18.5        11.1 
+16    35 35-40             18.8        11.4 
+17    36 35-40             19.1        11.8 
+18    37 35-40             19.2        12.1 
+19    38 35-40             19.1        12.3 
+20    39 35-40             19.1        12.8 
+```
+---
+count: false
+
+```
+# A tibble: 40 x 4
+     age age_group mort_group    rate
+   &lt;dbl&gt; &lt;fct&gt;     &lt;chr&gt;        &lt;dbl&gt;
+ 1    20 20-25     soldier_rate 16.9 
+ 2    20 20-25     english_rate  8.2 
+ 3    21 20-25     soldier_rate 17.1 
+ 4    21 20-25     english_rate  8.37
+ 5    22 20-25     soldier_rate 17.2 
+ 6    22 20-25     english_rate  8.54
+ 7    23 20-25     soldier_rate 17.3 
+ 8    23 20-25     english_rate  8.72
+ 9    24 20-25     soldier_rate 17.4 
+10    24 20-25     english_rate  8.90
+# … with 30 more rows
+```
+---
+count: false
+
+```
+# A tibble: 40 x 4
+# Groups:   age_group, mort_group [8]
+     age age_group mort_group    rate
+   &lt;dbl&gt; &lt;fct&gt;     &lt;chr&gt;        &lt;dbl&gt;
+ 1    20 20-25     soldier_rate 16.9 
+ 2    20 20-25     english_rate  8.2 
+ 3    21 20-25     soldier_rate 17.1 
+ 4    21 20-25     english_rate  8.37
+ 5    22 20-25     soldier_rate 17.2 
+ 6    22 20-25     english_rate  8.54
+ 7    23 20-25     soldier_rate 17.3 
+ 8    23 20-25     english_rate  8.72
+ 9    24 20-25     soldier_rate 17.4 
+10    24 20-25     english_rate  8.90
+# … with 30 more rows
+```
+---
+count: false
+
+```
+# A tibble: 8 x 3
+# Groups:   age_group [4]
+  age_group mort_group   death_rate
+  &lt;fct&gt;     &lt;chr&gt;             &lt;dbl&gt;
+1 20-25     english_rate       8.54
+2 20-25     soldier_rate      17.2 
+3 25-30     english_rate       9.49
+4 25-30     soldier_rate      17.8 
+5 30-35     english_rate      10.6 
+6 30-35     soldier_rate      18.3 
+7 35-40     english_rate      12.1 
+8 35-40     soldier_rate      19.1 
+```
+---
+count: false
+
+```
+# A tibble: 8 x 4
+# Groups:   age_group [4]
+  age_group mort_group   death_rate Label            
+  &lt;fct&gt;     &lt;chr&gt;             &lt;dbl&gt; &lt;chr&gt;            
+1 20-25     english_rate       8.54 Englishmen.      
+2 20-25     soldier_rate      17.2  English Soldiers.
+3 25-30     english_rate       9.49 Englishmen.      
+4 25-30     soldier_rate      17.8  English Soldiers.
+5 30-35     english_rate      10.6  Englishmen.      
+6 30-35     soldier_rate      18.3  English Soldiers.
+7 35-40     english_rate      12.1  Englishmen.      
+8 35-40     soldier_rate      19.1  English Soldiers.
+```
+---
+count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_10_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_11_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_12_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_13_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_14_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_15_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_16_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_17_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_18_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_19_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_20_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_21_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_22_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_23_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_24_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_25_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_26_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_27_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_28_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+
+
+.pull-left[
+![an image](Mission Accomplished.jpeg)
+]
+.pull-right[
+## Lessons Learned
+.midtext[
+- The &lt;b&gt;layered approach&lt;/b&gt; of `ggplot2` allows us to build up to the plot that we want iteratively.
+
+- Allows us to embed Nightingale's level of detail in our graphics.
+]
+]
+.midtext[
+- "Reveal unexpected connections between seemingly different graphics" [(Cox, 1978)]("https://www.jstor.org/stable/2346220?seq=1")
+  - &lt;b&gt;Bar Chart&lt;/b&gt; &amp; &lt;b&gt;Polar Area Chart&lt;/b&gt;
+]
+---
+.center[
+# Learn from Nightingale
+]
+
+1. &lt;b&gt;Quality Data &lt;/b&gt;- Tidy datasets are easy to manipulate, model and visualise.
+  
+--
+
+2. &lt;b&gt;Reproducibility&lt;/b&gt; - Circa 160 years later the diagrams are entirely reproducible. 
+
+--
+
+3. &lt;b&gt;Nightingale's annotations&lt;/b&gt; - A perfect exemplar for SciComm today.
+
+.center[
+.pull-left[
+![an image](annotate1.png)
+]
+.pull-right[
+![an image](annotate2.png)
+]
+]
+---
+.center[ 
+# Final Remark
+]
+
+From Hadley Wickham's ['A Layered Grammar of Graphics'](http://vita.had.co.nz/papers/layered-grammar.html):
+.center[
+.midtext[
+'&lt;i&gt;The grammar tells us what words make up our graphical "sentences,"&lt;/i&gt; but offers no advice on how to write well'
+ ]
+ ]
+---
 .center[
 # Reproducibility Receipt
 ]
@@ -1132,7 +1438,7 @@ Sys.time()
 ```
 
 ```
-[1] "2020-05-22 00:53:48 IST"
+[1] "2020-05-24 20:53:45 IST"
 ```
 
 ```r
@@ -1142,8 +1448,12 @@ git2r::repository()
 ```
 Local:    master /Users/edwardgunning/Desktop/FlorenceNightingale
 Remote:   master @ origin (https://github.com/edwardgunning/FlorenceNightingale)
-Head:     [18dccec] 2020-05-21: added tidyverse descrp
+Head:     [4b6651d] 2020-05-22: added title slide background of rose
 ```
+---
+.center[
+# Reproducibility Receipt (ctd.)
+]
 
 ```r
 sessionInfo()
@@ -1168,23 +1478,25 @@ other attached packages:
  [1] readxl_1.3.1       scales_1.1.0       cowplot_1.0.0      ggtext_0.1.0      
  [5] lubridate_1.7.8    HistData_0.8-6     forcats_0.5.0      stringr_1.4.0     
  [9] dplyr_0.8.5        purrr_0.3.4        readr_1.3.1        tidyr_1.0.2       
-[13] tibble_3.0.1       ggplot2_3.3.0.9000 tidyverse_1.3.0    flipbookr_0.1.0   
+[13] tibble_3.0.1       ggplot2_3.3.0.9000 tidyverse_1.3.0    reshape2_1.4.4    
+[17] flipbookr_0.1.0   
 
 loaded via a namespace (and not attached):
  [1] Rcpp_1.0.4.6     lattice_0.20-41  png_0.1-7        assertthat_0.2.1
- [5] digest_0.6.25    R6_2.4.1         cellranger_1.1.0 backports_1.1.6 
- [9] reprex_0.3.0     evaluate_0.14    httr_1.4.1       xaringan_0.16.1 
-[13] pillar_1.4.3     rlang_0.4.5      rstudioapi_0.11  rmarkdown_2.1   
-[17] labeling_0.3     munsell_0.5.0    gridtext_0.1.1   broom_0.5.6     
-[21] compiler_4.0.0   modelr_0.1.6     xfun_0.13        pkgconfig_2.0.3 
-[25] htmltools_0.4.0  tidyselect_1.0.0 fansi_0.4.1      crayon_1.3.4    
-[29] dbplyr_1.4.3     withr_2.2.0      grid_4.0.0       nlme_3.1-147    
-[33] jsonlite_1.6.1   gtable_0.3.0     lifecycle_0.2.0  DBI_1.1.0       
-[37] git2r_0.26.1     magrittr_1.5     cli_2.0.2        stringi_1.4.6   
-[41] farver_2.0.3     fs_1.4.1         xml2_1.3.1       ellipsis_0.3.0  
-[45] generics_0.0.2   vctrs_0.2.4      tools_4.0.0      glue_1.4.0      
-[49] markdown_1.1     hms_0.5.3        yaml_2.2.1       colorspace_1.4-1
-[53] rvest_0.3.5      knitr_1.28       haven_2.2.0     
+ [5] digest_0.6.25    utf8_1.1.4       R6_2.4.1         cellranger_1.1.0
+ [9] plyr_1.8.6       backports_1.1.6  reprex_0.3.0     evaluate_0.14   
+[13] httr_1.4.1       xaringan_0.16.1  pillar_1.4.3     rlang_0.4.5     
+[17] rstudioapi_0.11  rmarkdown_2.1    labeling_0.3     munsell_0.5.0   
+[21] gridtext_0.1.1   broom_0.5.6      compiler_4.0.0   modelr_0.1.6    
+[25] xfun_0.13        pkgconfig_2.0.3  htmltools_0.4.0  tidyselect_1.0.0
+[29] fansi_0.4.1      crayon_1.3.4     dbplyr_1.4.3     withr_2.2.0     
+[33] grid_4.0.0       nlme_3.1-147     jsonlite_1.6.1   gtable_0.3.0    
+[37] lifecycle_0.2.0  DBI_1.1.0        git2r_0.26.1     magrittr_1.5    
+[41] cli_2.0.2        stringi_1.4.6    farver_2.0.3     fs_1.4.1        
+[45] xml2_1.3.1       ellipsis_0.3.0   generics_0.0.2   vctrs_0.2.4     
+[49] tools_4.0.0      glue_1.4.0       markdown_1.1     hms_0.5.3       
+[53] yaml_2.2.1       colorspace_1.4-1 rvest_0.3.5      knitr_1.28      
+[57] haven_2.2.0     
 ```
 
 &lt;style type="text/css"&gt;
