--- a/YRS Presentation/FlipBookPresentation.html
+++ b/YRS Presentation/FlipBookPresentation.html
@@ -1382,6 +1382,9 @@ count: false
 .pull-left[
 ![an image](Mission Accomplished.jpeg)
 ]
+
+--
+
 .pull-right[
 ## Lessons Learned
 .midtext[
@@ -1395,19 +1398,16 @@ count: false
   - &lt;b&gt;Bar Chart&lt;/b&gt; &amp; &lt;b&gt;Polar Area Chart&lt;/b&gt;
 ]
 ---
+class: midtext
 .center[
-# Learn from Nightingale
+# Learning from Nightingale
 ]
 
-1. &lt;b&gt;Quality Data &lt;/b&gt;- Tidy datasets are easy to manipulate, model and visualise.
+1. __Quality Data__ - Tidy datasets are easy to manipulate, model and visualise.
   
---
-
-2. &lt;b&gt;Reproducibility&lt;/b&gt; - Circa 160 years later the diagrams are entirely reproducible. 
-
---
-
-3. &lt;b&gt;Nightingale's annotations&lt;/b&gt; - A perfect exemplar for SciComm today.
+2. __Reproducibility__ - Circa 160 years later the diagrams are entirely reproducible. 
+  
+3. __Nightingale's annotations__ - A perfect exemplar for SciComm today.
 
 .center[
 .pull-left[
@@ -1418,17 +1418,50 @@ count: false
 ]
 ]
 ---
+
+layout: true
+
 .center[ 
 # Final Remark
 ]
 
-From Hadley Wickham's ['A Layered Grammar of Graphics'](http://vita.had.co.nz/papers/layered-grammar.html):
+From ['A Layered Grammar of Graphics'](http://vita.had.co.nz/papers/layered-grammar.html):
 .center[
 .midtext[
 '&lt;i&gt;The grammar tells us what words make up our graphical "sentences,"&lt;/i&gt; but offers no advice on how to write well'
  ]
  ]
+ 
 ---
+---
+count: false
+
+.center[
+![an image](NightinaleBed.jpg)
+
+source: [Mirror UK](https://www.mirror.co.uk/news/uk-news/rare-florence-nightingale-treasures-discovered-21637511)
+]
+---
+count: false
+
+.center[
+![an image](ThanksCare.jpg)
+
+source: [ABC News](https://s.abcnews.com/images/International/WireAP_f56b45ebeda740028f96edf9809aac68_4x5_992.jpg)
+]
+
+---
+
+layout:false
+class: center
+
+![an image](thank you.jpeg)
+
+
+![an image](MediaIcon.png)
+---
+
+count:false
 .center[
 # Reproducibility Receipt
 ]
@@ -1438,7 +1471,7 @@ Sys.time()
 ```
 
 ```
-[1] "2020-05-24 20:53:45 IST"
+[1] "2020-05-24 23:11:28 IST"
 ```
 
 ```r
@@ -1448,9 +1481,10 @@ git2r::repository()
 ```
 Local:    master /Users/edwardgunning/Desktop/FlorenceNightingale
 Remote:   master @ origin (https://github.com/edwardgunning/FlorenceNightingale)
-Head:     [4b6651d] 2020-05-22: added title slide background of rose
+Head:     [da07b95] 2020-05-24: added slides
 ```
 ---
+count: false
 .center[
 # Reproducibility Receipt (ctd.)
 ]
