--- a/YRS Presentation/FlipBookPresentation.html
+++ b/YRS Presentation/FlipBookPresentation.html
@@ -20,7 +20,8 @@
 
 
 class: center
-background-image: url("ScienceOnAPostcard.png")
+
+background-image: url("CombinedHex.png")
 
 &lt;br&gt; 
 # Recreating Nightingale's Coxcombs 
@@ -134,12 +135,6 @@ _source: [A Contribution to the Sanitary History of the British Army (1859)](htt
 
 &lt;img src="Tidyverse Logo.png" width="107" style="display: block; margin: auto;" /&gt;
 ]
---
-&lt;br&gt;
-&lt;br&gt; 
-
-.center[
-.midtext[...and a __"Flipbook"__.]]
 
 ---
 .center[
@@ -217,7 +212,7 @@ Polar Area Chart
 .column[.content[
 
 ```r
-*Nightingale
+*Nightingale    # HistData package
 ```
 ]]
 .column[.content[
@@ -284,7 +279,7 @@ Polar Area Chart
 .column[.content[
 
 ```r
-Nightingale  %&gt;%  
+Nightingale  %&gt;%  # HistData package
 * filter(Date&lt;='1855-03-01')
 ```
 ]]
@@ -328,7 +323,7 @@ Polar Area Chart
 .column[.content[
 
 ```r
-Nightingale  %&gt;%  
+Nightingale  %&gt;%  # HistData package
   filter(Date&lt;='1855-03-01') %&gt;%  
 * mutate(death_rate=(Disease.rate + Wounds.rate + Other.rate))
 ```
@@ -373,7 +368,7 @@ Polar Area Chart
 .column[.content[
 
 ```r
-Nightingale  %&gt;%  
+Nightingale  %&gt;%  # HistData package
   filter(Date&lt;='1855-03-01') %&gt;%  
   mutate(death_rate=(Disease.rate + Wounds.rate + Other.rate)) %&gt;%  
 * mutate(Label=case_when(Date=='1855-01-01' ~ "JANUARY 1855",
@@ -422,7 +417,7 @@ Polar Area Chart
 .column[.content[
 
 ```r
-Nightingale  %&gt;%  
+Nightingale  %&gt;%  # HistData package
   filter(Date&lt;='1855-03-01') %&gt;%  
   mutate(death_rate=(Disease.rate + Wounds.rate + Other.rate)) %&gt;%  
   mutate(Label=case_when(Date=='1855-01-01' ~ "JANUARY 1855",  
@@ -444,7 +439,7 @@ Polar Area Chart
 .column[.content[
 
 ```r
-Nightingale  %&gt;%  
+Nightingale  %&gt;%  # HistData package
   filter(Date&lt;='1855-03-01') %&gt;%  
   mutate(death_rate=(Disease.rate + Wounds.rate + Other.rate)) %&gt;%  
   mutate(Label=case_when(Date=='1855-01-01' ~ "JANUARY 1855",  
@@ -467,7 +462,7 @@ Polar Area Chart
 .column[.content[
 
 ```r
-Nightingale  %&gt;%  
+Nightingale  %&gt;%  # HistData package
   filter(Date&lt;='1855-03-01') %&gt;%  
   mutate(death_rate=(Disease.rate + Wounds.rate + Other.rate)) %&gt;%  
   mutate(Label=case_when(Date=='1855-01-01' ~ "JANUARY 1855",  
@@ -491,7 +486,7 @@ Polar Area Chart
 .column[.content[
 
 ```r
-Nightingale  %&gt;%  
+Nightingale  %&gt;%  # HistData package
   filter(Date&lt;='1855-03-01') %&gt;%  
   mutate(death_rate=(Disease.rate + Wounds.rate + Other.rate)) %&gt;%  
   mutate(Label=case_when(Date=='1855-01-01' ~ "JANUARY 1855",  
@@ -516,7 +511,7 @@ Polar Area Chart
 .column[.content[
 
 ```r
-Nightingale  %&gt;%  
+Nightingale  %&gt;%  # HistData package
   filter(Date&lt;='1855-03-01') %&gt;%  
   mutate(death_rate=(Disease.rate + Wounds.rate + Other.rate)) %&gt;%  
   mutate(Label=case_when(Date=='1855-01-01' ~ "JANUARY 1855",  
@@ -542,7 +537,7 @@ Polar Area Chart
 .column[.content[
 
 ```r
-Nightingale  %&gt;%  
+Nightingale  %&gt;%  # HistData package
   filter(Date&lt;='1855-03-01') %&gt;%  
   mutate(death_rate=(Disease.rate + Wounds.rate + Other.rate)) %&gt;%  
   mutate(Label=case_when(Date=='1855-01-01' ~ "JANUARY 1855",  
@@ -569,7 +564,7 @@ Polar Area Chart
 .column[.content[
 
 ```r
-Nightingale  %&gt;%  
+Nightingale  %&gt;%  # HistData package
   filter(Date&lt;='1855-03-01') %&gt;%  
   mutate(death_rate=(Disease.rate + Wounds.rate + Other.rate)) %&gt;%  
   mutate(Label=case_when(Date=='1855-01-01' ~ "JANUARY 1855",  
@@ -597,7 +592,7 @@ Polar Area Chart
 .column[.content[
 
 ```r
-Nightingale  %&gt;%  
+Nightingale  %&gt;%  # HistData package
   filter(Date&lt;='1855-03-01') %&gt;%  
   mutate(death_rate=(Disease.rate + Wounds.rate + Other.rate)) %&gt;%  
   mutate(Label=case_when(Date=='1855-01-01' ~ "JANUARY 1855",  
@@ -626,7 +621,7 @@ Polar Area Chart
 .column[.content[
 
 ```r
-Nightingale  %&gt;%  
+Nightingale  %&gt;%  # HistData package
   filter(Date&lt;='1855-03-01') %&gt;%  
   mutate(death_rate=(Disease.rate + Wounds.rate + Other.rate)) %&gt;%  
   mutate(Label=case_when(Date=='1855-01-01' ~ "JANUARY 1855",  
@@ -656,7 +651,7 @@ Polar Area Chart
 .column[.content[
 
 ```r
-Nightingale  %&gt;%  
+Nightingale  %&gt;%  # HistData package
   filter(Date&lt;='1855-03-01') %&gt;%  
   mutate(death_rate=(Disease.rate + Wounds.rate + Other.rate)) %&gt;%  
   mutate(Label=case_when(Date=='1855-01-01' ~ "JANUARY 1855",  
@@ -687,7 +682,7 @@ Polar Area Chart
 .column[.content[
 
 ```r
-Nightingale  %&gt;%  
+Nightingale  %&gt;%  # HistData package
   filter(Date&lt;='1855-03-01') %&gt;%  
   mutate(death_rate=(Disease.rate + Wounds.rate + Other.rate)) %&gt;%  
   mutate(Label=case_when(Date=='1855-01-01' ~ "JANUARY 1855",  
@@ -719,7 +714,7 @@ Polar Area Chart
 .column[.content[
 
 ```r
-Nightingale  %&gt;%  
+Nightingale  %&gt;%  # HistData package
   filter(Date&lt;='1855-03-01') %&gt;%  
   mutate(death_rate=(Disease.rate + Wounds.rate + Other.rate)) %&gt;%  
   mutate(Label=case_when(Date=='1855-01-01' ~ "JANUARY 1855",  
@@ -752,7 +747,7 @@ Polar Area Chart
 .column[.content[
 
 ```r
-Nightingale  %&gt;%  
+Nightingale  %&gt;%  # HistData package
   filter(Date&lt;='1855-03-01') %&gt;%  
   mutate(death_rate=(Disease.rate + Wounds.rate + Other.rate)) %&gt;%  
   mutate(Label=case_when(Date=='1855-01-01' ~ "JANUARY 1855",  
@@ -786,7 +781,7 @@ Polar Area Chart
 .column[.content[
 
 ```r
-Nightingale  %&gt;%  
+Nightingale  %&gt;%  # HistData package
   filter(Date&lt;='1855-03-01') %&gt;%  
   mutate(death_rate=(Disease.rate + Wounds.rate + Other.rate)) %&gt;%  
   mutate(Label=case_when(Date=='1855-01-01' ~ "JANUARY 1855",  
@@ -1165,34 +1160,6 @@ count: false
 count: false
 
 ```
-# A tibble: 20 x 7
-     age n_soldier n_english d_soldier d_english age_group soldier_rate
-   &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt; &lt;fct&gt;            &lt;dbl&gt;
- 1    20     10000     10000       169        82 20-25             16.9
- 2    21      9831      9918       168        83 20-25             17.1
- 3    22      9663      9835       166        84 20-25             17.2
- 4    23      9497      9751       164        85 20-25             17.3
- 5    24      9333      9666       162        86 20-25             17.4
- 6    25      9171      9580       160        87 25-30             17.4
- 7    26      9011      9493       159        88 25-30             17.6
- 8    27      8852      9405       158        89 25-30             17.8
- 9    28      8694      9316       157        91 25-30             18.1
-10    29      8537      9225       155        91 25-30             18.2
-11    30      8382      9134       153        93 30-35             18.3
-12    31      8229      9041       150        94 30-35             18.2
-13    32      8079      8947       147        95 30-35             18.2
-14    33      7932      8852       145        97 30-35             18.3
-15    34      7787      8755       144        97 30-35             18.5
-16    35      7643      8658       144        99 35-40             18.8
-17    36      7499      8559       143       101 35-40             19.1
-18    37      7356      8458       141       102 35-40             19.2
-19    38      7215      8356       138       103 35-40             19.1
-20    39      7077      8253       135       106 35-40             19.1
-```
----
-count: false
-
-```
 # A tibble: 20 x 8
      age n_soldier n_english d_soldier d_english age_group soldier_rate
    &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt;     &lt;dbl&gt; &lt;fct&gt;            &lt;dbl&gt;
@@ -1321,6 +1288,9 @@ count: false
 ```
 ---
 count: false
+&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_9_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+---
+count: false
 &lt;img src="FlipBookPresentation_files/figure-html/lines_auto_10_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 count: false
@@ -1373,9 +1343,6 @@ count: false
 ---
 count: false
 &lt;img src="FlipBookPresentation_files/figure-html/lines_auto_27_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
----
-count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_28_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 
 
@@ -1460,7 +1427,27 @@ class: center
 
 ![an image](MediaIcon.png)
 ---
+count: false
 
+.center[
+# References
+]
+
+Any sources from the slides are hyperlinked, but here are some resources that I found useful for learning about Nightingale and her work:
+
+- All of [Lynn MacDonald's](https://en.wikipedia.org/wiki/Lynn_McDonald) work.
+
+- Significance Magazine [April isssue](https://rss.onlinelibrary.wiley.com/toc/17409713/2020/17/2) which is dedicated to Nightingale and is free to read until the end of May!
+
+- Prof. Deborah Ashby's recent [online talk](https://drive.google.com/file/d/14cFpGH-bVLLf-M4bfCiq_U4GaGZT978K/view) for RSS Leeds Bradford.
+
+- [Hugh Small](http://www.florence-nightingale-avenging-angel.co.uk/?page_id=2600) on why the Polar Area Chart was such a useful graphic converying Nightingale's message.
+
+- Prof. David Spiegelhalter speaking about Nightingale's statistical work in [this animation](https://www.youtube.com/watch?v=sNppKQh0xPo).
+
+- Prof. Lynn McDonald, Prof. David Spiegelhalter &amp; Prof Anne Marie Rafferty speaking about Nightinale's legacy at the British Library's recent [Florence Nightingale at 200](https://www.youtube.com/watch?v=35o414X_nwc) event.
+
+---
 count:false
 .center[
 # Reproducibility Receipt
@@ -1471,7 +1458,7 @@ Sys.time()
 ```
 
 ```
-[1] "2020-05-24 23:11:28 IST"
+[1] "2020-05-25 10:45:30 IST"
 ```
 
 ```r
@@ -1481,7 +1468,7 @@ git2r::repository()
 ```
 Local:    master /Users/edwardgunning/Desktop/FlorenceNightingale
 Remote:   master @ origin (https://github.com/edwardgunning/FlorenceNightingale)
-Head:     [da07b95] 2020-05-24: added slides
+Head:     [eba4d9e] 2020-05-24: fin slides
 ```
 ---
 count: false
