--- a/YRS Presentation/FlipBookPresentation.html
+++ b/YRS Presentation/FlipBookPresentation.html
@@ -1381,7 +1381,7 @@ class: midtext
 ![an image](annotate1.png)
 ]
 .pull-right[
-![an image](annotate2.png)
+![an image](annotate3.png)
 ]
 ]
 ---
@@ -1395,7 +1395,7 @@ layout: true
 From ['A Layered Grammar of Graphics'](http://vita.had.co.nz/papers/layered-grammar.html):
 .center[
 .midtext[
-'&lt;i&gt;The grammar tells us what words make up our graphical "sentences,"&lt;/i&gt; but offers no advice on how to write well'
+'&lt;i&gt;The grammar tells us what words make up our graphical "sentences"&lt;/i&gt;, but offers no advice on how to write well'
  ]
  ]
  
@@ -1406,7 +1406,7 @@ count: false
 .center[
 ![an image](NightinaleBed.jpg)
 
-source: [Mirror UK](https://www.mirror.co.uk/news/uk-news/rare-florence-nightingale-treasures-discovered-21637511)
+source: [Mirror UK - "Rare Florence Nightingale Treasures Uncovered"](https://www.mirror.co.uk/news/uk-news/rare-florence-nightingale-treasures-discovered-21637511)
 ]
 ---
 count: false
@@ -1437,11 +1437,11 @@ Any sources from the slides are hyperlinked, but here are some resources that I 
 
 - All of [Lynn MacDonald's](https://en.wikipedia.org/wiki/Lynn_McDonald) work.
 
-- Significance Magazine [April isssue](https://rss.onlinelibrary.wiley.com/toc/17409713/2020/17/2) which is dedicated to Nightingale and is free to read until the end of May!
+- Significance Magazine [April issue](https://rss.onlinelibrary.wiley.com/toc/17409713/2020/17/2) which is dedicated to Nightingale and is free to read until the end of May!
 
 - Prof. Deborah Ashby's recent [online talk](https://drive.google.com/file/d/14cFpGH-bVLLf-M4bfCiq_U4GaGZT978K/view) for RSS Leeds Bradford.
 
-- [Hugh Small](http://www.florence-nightingale-avenging-angel.co.uk/?page_id=2600) on why the Polar Area Chart was such a useful graphic converying Nightingale's message.
+- [Hugh Small](http://www.florence-nightingale-avenging-angel.co.uk/?page_id=2600) on why the Polar Area Chart was such a useful graphic in conveying Nightingale's message.
 
 - Prof. David Spiegelhalter speaking about Nightingale's statistical work in [this animation](https://www.youtube.com/watch?v=sNppKQh0xPo).
 
@@ -1458,7 +1458,7 @@ Sys.time()
 ```
 
 ```
-[1] "2020-05-25 10:45:30 IST"
+[1] "2020-05-25 22:26:14 IST"
 ```
 
 ```r
@@ -1468,7 +1468,7 @@ git2r::repository()
 ```
 Local:    master /Users/edwardgunning/Desktop/FlorenceNightingale
 Remote:   master @ origin (https://github.com/edwardgunning/FlorenceNightingale)
-Head:     [eba4d9e] 2020-05-24: fin slides
+Head:     [2452854] 2020-05-25: added refs for Nightingale
 ```
 ---
 count: false
@@ -1496,28 +1496,26 @@ attached base packages:
 [1] stats     graphics  grDevices utils     datasets  methods   base     
 
 other attached packages:
- [1] readxl_1.3.1       scales_1.1.0       cowplot_1.0.0      ggtext_0.1.0      
- [5] lubridate_1.7.8    HistData_0.8-6     forcats_0.5.0      stringr_1.4.0     
- [9] dplyr_0.8.5        purrr_0.3.4        readr_1.3.1        tidyr_1.0.2       
-[13] tibble_3.0.1       ggplot2_3.3.0.9000 tidyverse_1.3.0    reshape2_1.4.4    
-[17] flipbookr_0.1.0   
+ [1] readxl_1.3.1       scales_1.1.0       ggtext_0.1.0       lubridate_1.7.8   
+ [5] HistData_0.8-6     forcats_0.5.0      stringr_1.4.0      dplyr_0.8.5       
+ [9] purrr_0.3.4        readr_1.3.1        tidyr_1.0.2        tibble_3.0.1      
+[13] ggplot2_3.3.0.9000 tidyverse_1.3.0    flipbookr_0.1.0   
 
 loaded via a namespace (and not attached):
  [1] Rcpp_1.0.4.6     lattice_0.20-41  png_0.1-7        assertthat_0.2.1
  [5] digest_0.6.25    utf8_1.1.4       R6_2.4.1         cellranger_1.1.0
- [9] plyr_1.8.6       backports_1.1.6  reprex_0.3.0     evaluate_0.14   
-[13] httr_1.4.1       xaringan_0.16.1  pillar_1.4.3     rlang_0.4.5     
-[17] rstudioapi_0.11  rmarkdown_2.1    labeling_0.3     munsell_0.5.0   
-[21] gridtext_0.1.1   broom_0.5.6      compiler_4.0.0   modelr_0.1.6    
-[25] xfun_0.13        pkgconfig_2.0.3  htmltools_0.4.0  tidyselect_1.0.0
-[29] fansi_0.4.1      crayon_1.3.4     dbplyr_1.4.3     withr_2.2.0     
-[33] grid_4.0.0       nlme_3.1-147     jsonlite_1.6.1   gtable_0.3.0    
-[37] lifecycle_0.2.0  DBI_1.1.0        git2r_0.26.1     magrittr_1.5    
-[41] cli_2.0.2        stringi_1.4.6    farver_2.0.3     fs_1.4.1        
-[45] xml2_1.3.1       ellipsis_0.3.0   generics_0.0.2   vctrs_0.2.4     
-[49] tools_4.0.0      glue_1.4.0       markdown_1.1     hms_0.5.3       
-[53] yaml_2.2.1       colorspace_1.4-1 rvest_0.3.5      knitr_1.28      
-[57] haven_2.2.0     
+ [9] backports_1.1.6  reprex_0.3.0     evaluate_0.14    httr_1.4.1      
+[13] xaringan_0.16.1  pillar_1.4.3     rlang_0.4.5      rstudioapi_0.11 
+[17] rmarkdown_2.1    labeling_0.3     munsell_0.5.0    gridtext_0.1.1  
+[21] broom_0.5.6      compiler_4.0.0   modelr_0.1.6     xfun_0.13       
+[25] pkgconfig_2.0.3  htmltools_0.4.0  tidyselect_1.0.0 fansi_0.4.1     
+[29] crayon_1.3.4     dbplyr_1.4.3     withr_2.2.0      grid_4.0.0      
+[33] nlme_3.1-147     jsonlite_1.6.1   gtable_0.3.0     lifecycle_0.2.0 
+[37] DBI_1.1.0        git2r_0.26.1     magrittr_1.5     cli_2.0.2       
+[41] stringi_1.4.6    farver_2.0.3     fs_1.4.1         xml2_1.3.1      
+[45] ellipsis_0.3.0   generics_0.0.2   vctrs_0.2.4      tools_4.0.0     
+[49] glue_1.4.0       markdown_1.1     hms_0.5.3        yaml_2.2.1      
+[53] colorspace_1.4-1 rvest_0.3.5      knitr_1.28       haven_2.2.0     
 ```
 
 &lt;style type="text/css"&gt;
