add final slide :-)

--- a/YRS Presentation/FlipBookPresentation.html
+++ b/YRS Presentation/FlipBookPresentation.html
@@ -1412,9 +1412,9 @@ source: [Mirror UK - "Rare Florence Nightingale Treasures Uncovered"](https://ww
 count: false
 
 .center[
-![an image](ThanksCare.jpg)
+![an image](ournation.jpeg)
 
-source: [ABC News](https://s.abcnews.com/images/International/WireAP_f56b45ebeda740028f96edf9809aac68_4x5_992.jpg)
+source: [Telegraph UK](https://www.telegraph.co.uk/news/2020/05/13/coronavirus-positive-good-news-round-up-oldest-survivor-promising/)
 ]
 
 ---
@@ -1476,7 +1476,7 @@ Sys.time()
 ```
 
 ```
-[1] "2020-05-25 23:15:13 IST"
+[1] "2020-05-26 09:52:54 IST"
 ```
 
 ```r
@@ -1486,7 +1486,7 @@ git2r::repository()
 ```
 Local:    master /Users/edwardgunning/Desktop/FlorenceNightingale
 Remote:   master @ origin (https://github.com/edwardgunning/FlorenceNightingale)
-Head:     [0033e4f] 2020-05-25: changed second annotations diagram &amp; removed un-used library calls
+Head:     [4c277d7] 2020-05-25: added dataviz references
 ```
 ---
 count: false
