Added Finalised Version of Slides

--- a/YRS Presentation/Final-Slides.html
+++ b/YRS Presentation/Final-Slides.html
@@ -428,7 +428,7 @@ Nightingale  %&gt;%  # HistData package
 ```
 ]]
 .column[.content[
-&lt;img src="FlipBookPresentation_files/figure-html/nighting_auto_5_output-1.png" width="576" /&gt;
+&lt;img src="Final-Slides_files/figure-html/nighting_auto_5_output-1.png" width="576" /&gt;
 ]]
 ---
 class: split-40
@@ -451,7 +451,7 @@ Nightingale  %&gt;%  # HistData package
 ```
 ]]
 .column[.content[
-&lt;img src="FlipBookPresentation_files/figure-html/nighting_auto_6_output-1.png" width="576" /&gt;
+&lt;img src="Final-Slides_files/figure-html/nighting_auto_6_output-1.png" width="576" /&gt;
 ]]
 ---
 class: split-40
@@ -475,7 +475,7 @@ Nightingale  %&gt;%  # HistData package
 ```
 ]]
 .column[.content[
-&lt;img src="FlipBookPresentation_files/figure-html/nighting_auto_7_output-1.png" width="576" /&gt;
+&lt;img src="Final-Slides_files/figure-html/nighting_auto_7_output-1.png" width="576" /&gt;
 ]]
 ---
 class: split-40
@@ -500,7 +500,7 @@ Nightingale  %&gt;%  # HistData package
 ```
 ]]
 .column[.content[
-&lt;img src="FlipBookPresentation_files/figure-html/nighting_auto_8_output-1.png" width="576" /&gt;
+&lt;img src="Final-Slides_files/figure-html/nighting_auto_8_output-1.png" width="576" /&gt;
 ]]
 ---
 class: split-40
@@ -526,7 +526,7 @@ Nightingale  %&gt;%  # HistData package
 ```
 ]]
 .column[.content[
-&lt;img src="FlipBookPresentation_files/figure-html/nighting_auto_9_output-1.png" width="576" /&gt;
+&lt;img src="Final-Slides_files/figure-html/nighting_auto_9_output-1.png" width="576" /&gt;
 ]]
 ---
 class: split-40
@@ -553,7 +553,7 @@ Nightingale  %&gt;%  # HistData package
 ```
 ]]
 .column[.content[
-&lt;img src="FlipBookPresentation_files/figure-html/nighting_auto_10_output-1.png" width="576" /&gt;
+&lt;img src="Final-Slides_files/figure-html/nighting_auto_10_output-1.png" width="576" /&gt;
 ]]
 ---
 class: split-40
@@ -581,7 +581,7 @@ Nightingale  %&gt;%  # HistData package
 ```
 ]]
 .column[.content[
-&lt;img src="FlipBookPresentation_files/figure-html/nighting_auto_11_output-1.png" width="576" /&gt;
+&lt;img src="Final-Slides_files/figure-html/nighting_auto_11_output-1.png" width="576" /&gt;
 ]]
 ---
 class: split-40
@@ -610,7 +610,7 @@ Nightingale  %&gt;%  # HistData package
 ```
 ]]
 .column[.content[
-&lt;img src="FlipBookPresentation_files/figure-html/nighting_auto_12_output-1.png" width="576" /&gt;
+&lt;img src="Final-Slides_files/figure-html/nighting_auto_12_output-1.png" width="576" /&gt;
 ]]
 ---
 class: split-40
@@ -640,7 +640,7 @@ Nightingale  %&gt;%  # HistData package
 ```
 ]]
 .column[.content[
-&lt;img src="FlipBookPresentation_files/figure-html/nighting_auto_13_output-1.png" width="576" /&gt;
+&lt;img src="Final-Slides_files/figure-html/nighting_auto_13_output-1.png" width="576" /&gt;
 ]]
 ---
 class: split-40
@@ -671,7 +671,7 @@ Nightingale  %&gt;%  # HistData package
 ```
 ]]
 .column[.content[
-&lt;img src="FlipBookPresentation_files/figure-html/nighting_auto_14_output-1.png" width="576" /&gt;
+&lt;img src="Final-Slides_files/figure-html/nighting_auto_14_output-1.png" width="576" /&gt;
 ]]
 ---
 class: split-40
@@ -703,7 +703,7 @@ Nightingale  %&gt;%  # HistData package
 ```
 ]]
 .column[.content[
-&lt;img src="FlipBookPresentation_files/figure-html/nighting_auto_15_output-1.png" width="576" /&gt;
+&lt;img src="Final-Slides_files/figure-html/nighting_auto_15_output-1.png" width="576" /&gt;
 ]]
 ---
 class: split-40
@@ -736,7 +736,7 @@ Nightingale  %&gt;%  # HistData package
 ```
 ]]
 .column[.content[
-&lt;img src="FlipBookPresentation_files/figure-html/nighting_auto_16_output-1.png" width="576" /&gt;
+&lt;img src="Final-Slides_files/figure-html/nighting_auto_16_output-1.png" width="576" /&gt;
 ]]
 ---
 class: split-40
@@ -770,7 +770,7 @@ Nightingale  %&gt;%  # HistData package
 ```
 ]]
 .column[.content[
-&lt;img src="FlipBookPresentation_files/figure-html/nighting_auto_17_output-1.png" width="576" /&gt;
+&lt;img src="Final-Slides_files/figure-html/nighting_auto_17_output-1.png" width="576" /&gt;
 ]]
 ---
 class: split-40
@@ -805,12 +805,17 @@ Nightingale  %&gt;%  # HistData package
 ```
 ]]
 .column[.content[
-&lt;img src="FlipBookPresentation_files/figure-html/nighting_auto_18_output-1.png" width="576" /&gt;
+&lt;img src="Final-Slides_files/figure-html/nighting_auto_18_output-1.png" width="576" /&gt;
 ]]
 
 
 ---
-
+layout: true
+count: false
+---
+count: false
+---
+count:false
 
 
 
@@ -1059,60 +1064,67 @@ count: false
 ```
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/fullrose_auto_5_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/fullrose_auto_5_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/fullrose_auto_6_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/fullrose_auto_6_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/fullrose_auto_7_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/fullrose_auto_7_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/fullrose_auto_8_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/fullrose_auto_8_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/fullrose_auto_9_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/fullrose_auto_9_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/fullrose_auto_10_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/fullrose_auto_10_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/fullrose_auto_11_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/fullrose_auto_11_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/fullrose_auto_12_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/fullrose_auto_12_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/fullrose_auto_13_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/fullrose_auto_13_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/fullrose_auto_14_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/fullrose_auto_14_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/fullrose_auto_15_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/fullrose_auto_15_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/fullrose_auto_16_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/fullrose_auto_16_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/fullrose_auto_17_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/fullrose_auto_17_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/fullrose_auto_18_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/fullrose_auto_18_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/fullrose_auto_19_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/fullrose_auto_19_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/fullrose_auto_20_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/fullrose_auto_20_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/fullrose_auto_21_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/fullrose_auto_21_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/fullrose_auto_22_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/fullrose_auto_22_output-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+---
+count: false
+&lt;img src="Final-Slides_files/figure-html/unnamed-chunk-8-1.png" width="1296" style="display: block; margin: auto;" /&gt;
 
 ---
+count: false
+&lt;img src="Final-Slides_files/figure-html/unnamed-chunk-9-1.png" width="1296" style="display: block; margin: auto;" /&gt;
+---
+layout: false
 .center[# 2. Lines Diagram
 ]
 .center[
@@ -1287,61 +1299,61 @@ count: false
 ```
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_9_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/lines_auto_9_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_10_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/lines_auto_10_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_11_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/lines_auto_11_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_12_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/lines_auto_12_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_13_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/lines_auto_13_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_14_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/lines_auto_14_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_15_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/lines_auto_15_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_16_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/lines_auto_16_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_17_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/lines_auto_17_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_18_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/lines_auto_18_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_19_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/lines_auto_19_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_20_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/lines_auto_20_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_21_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/lines_auto_21_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_22_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/lines_auto_22_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_23_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/lines_auto_23_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_24_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/lines_auto_24_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_25_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/lines_auto_25_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_26_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/lines_auto_26_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 ---
 count: false
-&lt;img src="FlipBookPresentation_files/figure-html/lines_auto_27_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
+&lt;img src="Final-Slides_files/figure-html/lines_auto_27_output-1.png" width="1152" style="display: block; margin: auto;" /&gt;
 
 ---
 
@@ -1513,7 +1525,7 @@ Sys.time()
 ```
 
 ```
-[1] "2020-05-26 23:48:29 IST"
+[1] "2020-05-27 00:07:45 IST"
 ```
 
 ```r
@@ -1551,10 +1563,10 @@ attached base packages:
 [1] stats     graphics  grDevices utils     datasets  methods   base     
 
 other attached packages:
- [1] readxl_1.3.1       scales_1.1.1       ggtext_0.1.0       lubridate_1.7.8   
- [5] HistData_0.8-6     forcats_0.5.0      stringr_1.4.0      dplyr_0.8.5       
- [9] purrr_0.3.4        readr_1.3.1        tidyr_1.1.0        tibble_3.0.1      
-[13] ggplot2_3.3.0.9000 tidyverse_1.3.0    flipbookr_0.1.0   
+ [1] cowplot_1.0.0      readxl_1.3.1       scales_1.1.1       ggtext_0.1.0      
+ [5] lubridate_1.7.8    HistData_0.8-6     forcats_0.5.0      stringr_1.4.0     
+ [9] dplyr_0.8.5        purrr_0.3.4        readr_1.3.1        tidyr_1.1.0       
+[13] tibble_3.0.1       ggplot2_3.3.0.9000 tidyverse_1.3.0    flipbookr_0.1.0   
 
 loaded via a namespace (and not attached):
  [1] Rcpp_1.0.4.6     lattice_0.20-41  png_0.1-7        assertthat_0.2.1
