added final reference

--- a/YRS Presentation/Final-Slides.html
+++ b/YRS Presentation/Final-Slides.html
@@ -1496,6 +1496,7 @@ Any sources from the slides are hyperlinked, but here are some resources that I 
 
 - Prof. Lynn McDonald, Prof. David Spiegelhalter &amp; Prof Anne Marie Rafferty speaking about Nightinale's legacy at the British Library's recent [Florence Nightingale at 200](https://www.youtube.com/watch?v=35o414X_nwc) event.
 
+- [The YSS Nightingale 2020 Competition](https://statsyss.wordpress.com/)
 ---
 
 count: false
@@ -1525,7 +1526,7 @@ Sys.time()
 ```
 
 ```
-[1] "2020-05-27 00:07:45 IST"
+[1] "2020-05-27 00:12:51 IST"
 ```
 
 ```r
@@ -1535,7 +1536,7 @@ git2r::repository()
 ```
 Local:    master /Users/edwardgunning/Desktop/FlorenceNightingale
 Remote:   master @ origin (https://github.com/edwardgunning/FlorenceNightingale)
-Head:     [22e2c51] 2020-05-26: add final slide :-)
+Head:     [405226e] 2020-05-26: Added Finalised Version of Slides
 ```
 ---
 count: false
